--- a/src/common/css/base.css
+++ b/src/common/css/base.css
@@ -3,6 +3,8 @@
     font-weight:200;
     font-family : 'PingFanf SC','Helvetica-Light',arial,sans-serif
   }
+  .clearfix {display: inline-block}
+  .clearfix:after {display:block;content: ".";height: 0;line-height: 0;clear: both;visibility: hidden}
 @media (-webkit-max-device-pixel-ratio: 1.5),(min-device-pixel-ratio: 1.5){
   .border-1px:after {
     -webkit-transform: scaleY(0.7);
